FusionDev Backup1/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Changed__c</fullName>
        <description>Status changed for the first response email</description>
        <label>Status Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <label>Store Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Phone_Number__c</fullName>
        <label>Store Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolution_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Mock Up</fullName>
                </value>
                <value>
                    <fullName>Waiting for Pantone(s)</fullName>
                </value>
                <value>
                    <fullName>Waiting for Parts</fullName>
                </value>
                <value>
                    <fullName>Waiting for PO</fullName>
                </value>
                <value>
                    <fullName>Waiting for Proof</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval/Account Form</fullName>
                </value>
                <value>
                    <fullName>Waiting for Freight Quote</fullName>
                </value>
                <value>
                    <fullName>Waiting for Logo Payment</fullName>
                </value>
                <value>
                    <fullName>Waiting for Cooler Payment</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Declined CC</fullName>
                </value>
                <value>
                    <fullName>Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Charged</fullName>
                </value>
                <value>
                    <fullName>CC Declined/Write Off</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Non Return</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_with_ERP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync with ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_C_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Product)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tolling_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tolling Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Resolution_Time__c</fullName>
        <label>Total Resolution Time</label>
        <summarizedField>Case_History__c.Duration__c</summarizedField>
        <summaryForeignKey>Case_History__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_Email__c</fullName>
        <label>Tracking Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tracking_Number1__c</fullName>
        <label>Tracking Number1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Added for RMA Process</description>
        <label>Tracking Number</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trading_Post_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trading Post Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Status__c</fullName>
        <label>Updated Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to identify when a customer credit card has been charged to release order</description>
        <label>Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upset_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will escalate the case to your manager.</inlineHelpText>
        <label>Upset Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Form_Email__c</fullName>
        <label>Web Form Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Web_Order__c</fullName>
        <description>Added for RMA Team</description>
        <label>Web Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lc_OwnerLKP_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lc_OwnerLKP_Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lc_Owner_ExternalID__c</fullName>
        <label>lc_Owner_ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lc_ProductLKP_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lc ProductLKP Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lc_Product_ExternalID__c</fullName>
        <label>lc Product ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>BazaarVoice</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>equals</operation>
            <value>reports@bazaarvoice.com</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>BazaarVoice</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dealer_RMA_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <label>Dealer RMA</label>
        <queue>Dealer_RMA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FED_EX</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>contains</operation>
            <value>Fed Ex,Tendered</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>FED EX</label>
        <sharedTo>
            <group>Support_Team_Custom_Logo</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Finance</label>
        <queue>Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Golf_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>equals</operation>
            <value>golf@yeti.com,golf@yeticoolers.com</value>
        </filters>
        <label>GREEN GRASS Cases</label>
        <queue>Dealer</queue>
        <sharedTo>
            <group>Golf_Accounts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Queue--Marketing</label>
        <queue>Marketing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Cases_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Cases - Closed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Cases_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Email_Response__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Case_Sub_Reason__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Cases - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Cases_Reopened</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Reopened</value>
        </filters>
        <label>My Cases - Reopened</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Support_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Trading_Post_Visible__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Support Requests</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Outfitter_RMA_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Outfitter RMA</label>
        <queue>Outfitter_RMA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_AR_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue-AR</label>
        <queue>Queue_AR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_Custom_Logo</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Email_Response__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Queue - Corporate Sales</label>
        <queue>Custom_Logo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_Dealer</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Inside_Sales_Rep__c</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>Follow_Up_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filters>
        <label>Queue - Dealer</label>
        <queue>Dealer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_Escalated</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Inside_Sales_Rep__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Upset_Customer__c</columns>
        <columns>Safety_Concern__c</columns>
        <columns>Escalated_Reason__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Follow_Up_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Queue - Escalated</label>
        <queue>Escalated</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Canada_Account</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <label>Canada Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Logo</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <description>Case record type for the custom logo support team.</description>
        <label>Corporate Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <description>Case record type for the dealer support team.</description>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outfitter</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <description>Case record type for the outfitter support team.</description>
        <label>Outfitter</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Require_Either_Contact_or_Lead</fullName>
        <active>false</active>
        <description>Require user to populate either a contact or lead but not both before being able to close a case.</description>
        <errorConditionFormula>AND(ContactId = &quot;&quot;, Lead_Name__c = &quot;&quot;,
ISPICKVAL( Status , &quot;Closed&quot;), 
OR(NOT(ISPICKVAL( Resolution_Picklist__c , &quot;SPAM&quot; ))) ,NOT(ISPICKVAL( Resolution_Picklist__c , &quot;No Response Necessary&quot; )),NOT(ISPICKVAL( Type, &quot;Outfitter&quot; )),NOT(ISPICKVAL( Resolution_Picklist__c , &quot;Transferred to Other Department&quot; )))</errorConditionFormula>
        <errorMessage>You must populate either a contact or lead record except for when reason is No Response Necessary or SPAM.</errorMessage>
    </validationRules>
</CustomObject>